Fixed settings checkbox alignment issue

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -9,7 +9,4 @@
 .checkbox-wrapper {
     min-height: 50px;
     display: flex;
-    >mat-checkbox{
-        align-self: center;
-    }
 }
